<resources>
    <string name="app_name">OpKomst Manager</string>
    <string name="title_activity_sign__up">Sign_Up</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_student__home">Student_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abhinay Shrivastav</string>
    <string name="nav_header_subtitle">Information Technology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_subjects">Your Subjects</string>
    <string name="menu_chats">Subject Chats</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_result">Result</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_feedback">Feedback</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="array_name">
        <item>Information Technology</item>
    </string-array>

</resources>
