<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.final_year.opkomstmanager.Student.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="project.final_year.opkomstmanager.Student.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_subjects"
        android:name="project.final_year.opkomstmanager.Student.YourSubjects"
        android:label="@string/menu_subjects"
        tools:layout="@layout/fragment_your_subjects" />
    <fragment
        android:id="@+id/nav_chats"
        android:name="project.final_year.opkomstmanager.Student.SubjectChats"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_subject_chats" />
    <fragment
        android:id="@+id/nav_timetable"
        android:name="project.final_year.opkomstmanager.Student.TimeTableFragment"
        android:label="@string/menu_timetable"
        tools:layout="@layout/fragment_time_table"/>
    <fragment
        android:id="@+id/nav_result"
        android:name="project.final_year.opkomstmanager.Student.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/nav_notice"
        android:name="project.final_year.opkomstmanager.Student.NoticeFragment"
        android:label="@string/menu_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="project.final_year.opkomstmanager.Student.SlideshowFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_slideshow" />
</navigation>